# top-down-platformer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  platformy.cpp
assets/: cobble_tile.aseprite  default_tile.xcf  grass_tile.aseprite  npc.xcf  npc_spritesheet.ase  sand_tile.aseprite
include/: enemy.h  enemy_manager.h  entity.h  event_handler.h  level.h  player.h  res_path.h  tile.h
src/: .platformy.cpp.swp  :w  platformy.cpp
